k8s/mysql.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: laradock-mysql-deployment
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - name: mysql
        image: mysql:8.0
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: mysql-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-storage
        persistentVolumeClaim:
          claimName: mysql-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: db # <--- MATCHES YOUR COMPOSE SERVICE NAME
spec:
  selector:
    app: mysql # Points the service to the deployment
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
